[package]
name = "todo"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "simple command-line todo list"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
clap = { version = "3.0", features = ["cargo", "derive"] }
once_cell = "1.9"
regex = "1.4"

[build-dependencies]
clap = { version = "3.0", features = ["cargo", "derive"] }
clap_complete = "3.0"