[package]
name = "todo"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "simple command-line todo list"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["cargo", "derive"] }
nom = "7.1"
once_cell = "1.9"
time = { version = "0.3", features = ["formatting", "local-offset"] }

[build-dependencies]
clap = { version = "3.1", features = ["cargo", "derive"] }
clap_complete = "3.1"
