[package]
name = "todo"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "simple command-line todo list"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["cargo", "derive"] }
clap_complete = "4.1"
nom = "8"
time = { version = "0.3", features = ["formatting", "local-offset"] }
